--- a/create-officer-assignments/src/create-officer-codebook.qmd
+++ b/create-officer-assignments/src/create-officer-codebook.qmd
@@ -1,7 +1,6 @@
 ---
 title: "Officer Codebook"
 format: pdf
-editor: visual
 ---
 
 ```{r, include = F}
@@ -21,14 +20,14 @@ summary <- GetSummary(officers)
 
 ## Officer Roster
 
--   **birth_year**: Birth year of the officer.
--   **appointed_month**: The month and year the officer was made an officer in YYYY-MM-DD format. The day is always the first day of the month.
--   **officer_id**: Unique identifier for each officer.
--   **officer_race**: Race of the officer.
--   **officer_gender**: Sex of the officer.
--   **spanish**: Does the officer speak Spanish or not?
--   Uniquely identified by **officer_id**. The unit of observation is an officer.
--   **Number of officers**: `r nrow(officers)`
+* **birth_year**: Birth year of the officer.
+* **appointed_month**: The month and year the officer was made an officer in YYYY-MM-DD format. The day is always the first day of the month.
+* **officer_id**: Unique identifier for each officer.
+* **officer_race**: Race of the officer.
+* **officer_gender**: Sex of the officer.
+* **spanish**: Does the officer speak Spanish or not?
+* Uniquely identified by **officer_id**. The unit of observation is an officer.
+* **Number of officers**: `r nrow(officers)`
 
 ### Creating the officer roster
 
