--- a/paper-analyses/src/final_paper_analyses.Rmd
+++ b/paper-analyses/src/final_paper_analyses.Rmd
@@ -37,7 +37,10 @@ final_vars <-
            property_cr_capita = property_cr * 10000 / total_pop,
            violent_cr_capita = violent_cr * 10000 /  total_pop,
            mean_years_exp = mean_days_exp / 365,
-           mean_years_worked_unit = mean_months_worked_unit / 12)
+           mean_years_worked_unit = mean_months_worked_unit / 12,
+           percentage_officer_black = prcnt_officer_black * 100,
+           black_diff_prcnt = black_diff * 100,
+           black_ratio_prcnt = black_ratio * 100)
 ```
 
 ## Regression Models
@@ -70,8 +73,7 @@ cong_full <-
           family = "negbin",
           data = final_vars)
 
-offset_row <- tibble(term = c("",
-                              "Offset - Black Pop."),
+offset_row <- tibble(term = c("", "Offset - Black Pop."),
                      `Model 1` = c("Model 1", "Yes"),
                      `Model 2` = c("Model 2", "Yes"),
                      `Model 3` = c("Model 3", "Yes"),
@@ -87,8 +89,8 @@ rename = c(black_ratio = "Black Racial Congruence",
            log_total_officers = "Log of the Total Number of Officers")
 
 modelsummary(list(cong_basic,
-                  "Stops of Black Civilians" = prcnt_basic,
-                  cong_full,
+                  prcnt_basic,
+                  "Stops of Black Civilians" = cong_full,
                   prcnt_full),
              coef_omit = "(Intercept)|theta",
              coef_map = rename,
@@ -175,4 +177,87 @@ modelsummary(list("Stops of Black Civilians" = cong_basic_std,
     kable_styling(full_width = F, latex_options = "scale_down")
 ```
 
+## Have them actually be percentage values
 
+```{r}
+prcnt_basic <-
+    femlm(black_stops ~ percentage_officer_black + violent_cr_capita +
+              property_cr_capita + log_total_officers + year +
+              offset(log(black)) | unit,
+          family = "negbin",
+          data = final_vars)
+
+prcnt_full <-
+    femlm(black_stops ~ percentage_officer_black + mean_years_worked_unit +
+              violent_cr_capita + property_cr_capita + log_total_officers +
+              year + offset(log(black)) | unit,
+          family = "negbin",
+          data = final_vars)
+
+cong_basic <-
+    femlm(black_stops ~ black_ratio_prcnt + violent_cr_capita + property_cr_capita +
+              log_total_officers + year + offset(log(black)) | unit,
+          family = "negbin",
+          data = final_vars)
+
+cong_full <-
+    femlm(black_stops ~ black_ratio_prcnt + mean_years_worked_unit +
+              violent_cr_capita + property_cr_capita + log_total_officers +
+              year + offset(log(black)) | unit,
+          family = "negbin",
+          data = final_vars)
+
+diff_basic <-
+    femlm(black_stops ~ black_diff_prcnt + violent_cr_capita + property_cr_capita +
+              log_total_officers + year + offset(log(black)) | unit,
+          family = "negbin",
+          data = final_vars)
+
+diff_full <-
+    femlm(black_stops ~ black_diff_prcnt + mean_years_worked_unit +
+              violent_cr_capita + property_cr_capita + log_total_officers +
+              year + offset(log(black)) | unit,
+          family = "negbin",
+          data = final_vars)
+
+offset_row <- tibble(term = c("", "Offset - Black Pop."),
+                     `Model 1` = c("Model 1", "Yes"),
+                     `Model 2` = c("Model 2", "Yes"),
+                     `Model 3` = c("Model 3", "Yes"),
+                     `Model 4` = c("Model 4", "Yes"),
+                     `Model 5` = c("Model 5", "Yes"),
+                     `Model 6` = c("Model 6", "Yes"))
+
+attr(offset_row, "position") <- c(1, 10)
+
+rename = c(black_ratio_prcnt = "Black Racial Congruence (Ratio)",
+           black_diff_prcnt = "Black Racial Congruence (Diff)",
+           percentage_officer_black = "Percentage of Officers Who Are Black",
+           mean_years_worked_unit = "Years Worked In Unit (Mean)",
+           violent_cr_capita = "Violent Crime Per 10,000",
+           property_cr_capita = "Property Crime Per 10,000",
+           log_total_officers = "Log of the Total Number of Officers")
+
+modelsummary(
+    list(
+        cong_basic,
+        cong_full,
+        "Stops of Black Civilians" = prcnt_basic,
+        prcnt_full,
+        diff_basic,
+        diff_full
+    ),
+    coef_omit = "(Intercept)|theta",
+    coef_map = rename,
+    estimate = "{estimate} ({std.error}){stars}",
+    statistic = NULL,
+    stars = T,
+    gof_omit = "R2$|R2 Adj|R2 Within",
+    exponentiate = T,
+    output = "latex",
+    add_rows = offset_row,
+    notes = c(
+        "Standard Errors in parentheses. Coefficients are incident rate ratios.",
+        "P-values are denoted by symbols: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")) %>%
+    kable_styling(full_width = F, latex_options = "scale_down")
+```
