hopefully finally done mostly.

--- a/paper-analyses/src/final_paper_analyses.Rmd
+++ b/paper-analyses/src/final_paper_analyses.Rmd
@@ -22,6 +22,7 @@ library(GGally)
 library(sandwich)
 library(parameters)
 library(modelsummary)
+library(marginaleffects)
 
 library(here)
 source(here("functions.R"))
@@ -47,14 +48,14 @@ final_vars <-
 
 ```{r}
 prcnt_basic <-
-    femlm(black_stops ~ prcnt_officer_black + violent_cr_capita +
+    femlm(black_stops ~ percentage_officer_black + violent_cr_capita +
               property_cr_capita + log_total_officers + year +
               offset(log(black)) | unit,
           family = "negbin",
           data = final_vars)
 
 prcnt_full <-
-    femlm(black_stops ~ prcnt_officer_black + mean_years_worked_unit +
+    femlm(black_stops ~ percentage_officer_black + mean_years_worked_unit +
               violent_cr_capita + property_cr_capita + log_total_officers +
               year + offset(log(black)) | unit,
           family = "negbin",
@@ -82,7 +83,7 @@ offset_row <- tibble(term = c("", "Offset - Black Pop."),
 attr(offset_row, "position") <- c(1, 10)
 
 rename = c(black_ratio = "Black Racial Congruence",
-           prcnt_officer_black = "Percentage of Officers Who Are Black",
+           percentage_officer_black = "Percentage of Officers Who Are Black",
            mean_years_worked_unit = "Years Worked In Unit (Mean)",
            violent_cr_capita = "Violent Crime Per 10,000",
            property_cr_capita = "Property Crime Per 10,000",
@@ -180,84 +181,132 @@ modelsummary(list("Stops of Black Civilians" = cong_basic_std,
 ## Have them actually be percentage values
 
 ```{r}
-prcnt_basic <-
-    femlm(black_stops ~ percentage_officer_black + violent_cr_capita +
-              property_cr_capita + log_total_officers + year +
-              offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-prcnt_full <-
-    femlm(black_stops ~ percentage_officer_black + mean_years_worked_unit +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-cong_basic <-
-    femlm(black_stops ~ black_ratio_prcnt + violent_cr_capita + property_cr_capita +
-              log_total_officers + year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-cong_full <-
-    femlm(black_stops ~ black_ratio_prcnt + mean_years_worked_unit +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-diff_basic <-
-    femlm(black_stops ~ black_diff_prcnt + violent_cr_capita + property_cr_capita +
-              log_total_officers + year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-diff_full <-
-    femlm(black_stops ~ black_diff_prcnt + mean_years_worked_unit +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-offset_row <- tibble(term = c("", "Offset - Black Pop."),
-                     `Model 1` = c("Model 1", "Yes"),
-                     `Model 2` = c("Model 2", "Yes"),
-                     `Model 3` = c("Model 3", "Yes"),
-                     `Model 4` = c("Model 4", "Yes"),
-                     `Model 5` = c("Model 5", "Yes"),
-                     `Model 6` = c("Model 6", "Yes"))
-
-attr(offset_row, "position") <- c(1, 10)
-
-rename = c(black_ratio_prcnt = "Black Racial Congruence (Ratio)",
-           black_diff_prcnt = "Black Racial Congruence (Diff)",
-           percentage_officer_black = "Percentage of Officers Who Are Black",
-           mean_years_worked_unit = "Years Worked In Unit (Mean)",
-           violent_cr_capita = "Violent Crime Per 10,000",
-           property_cr_capita = "Property Crime Per 10,000",
-           log_total_officers = "Log of the Total Number of Officers")
-
-modelsummary(
-    list(
-        cong_basic,
-        cong_full,
-        "Stops of Black Civilians" = prcnt_basic,
-        prcnt_full,
-        diff_basic,
-        diff_full
-    ),
-    coef_omit = "(Intercept)|theta",
-    coef_map = rename,
-    estimate = "{estimate} ({std.error}){stars}",
-    statistic = NULL,
-    stars = T,
-    gof_omit = "R2$|R2 Adj|R2 Within",
-    exponentiate = T,
-    output = "latex",
-    add_rows = offset_row,
-    notes = c(
-        "Standard Errors in parentheses. Coefficients are incident rate ratios.",
-        "P-values are denoted by symbols: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")) %>%
-    kable_styling(full_width = F, latex_options = "scale_down")
+# prcnt_basic <-
+#     femlm(black_stops ~ percentage_officer_black + violent_cr_capita +
+#               property_cr_capita + log_total_officers + year +
+#               offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# prcnt_full <-
+#     femlm(black_stops ~ percentage_officer_black + mean_years_worked_unit +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# cong_basic <-
+#     femlm(black_stops ~ black_ratio_prcnt + violent_cr_capita + property_cr_capita +
+#               log_total_officers + year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# cong_full <-
+#     femlm(black_stops ~ black_ratio_prcnt + mean_years_worked_unit +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# diff_basic <-
+#     femlm(black_stops ~ black_diff_prcnt + violent_cr_capita + property_cr_capita +
+#               log_total_officers + year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# diff_full <-
+#     femlm(black_stops ~ black_diff_prcnt + mean_years_worked_unit +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# offset_row <- tibble(term = c("", "Offset - Black Pop."),
+#                      `Model 1` = c("Model 1", "Yes"),
+#                      `Model 2` = c("Model 2", "Yes"),
+#                      `Model 3` = c("Model 3", "Yes"),
+#                      `Model 4` = c("Model 4", "Yes"),
+#                      `Model 5` = c("Model 5", "Yes"),
+#                      `Model 6` = c("Model 6", "Yes"))
+# 
+# attr(offset_row, "position") <- c(1, 10)
+# 
+# rename = c(black_ratio_prcnt = "Black Racial Congruence (Ratio)",
+#            black_diff_prcnt = "Black Racial Congruence (Diff)",
+#            percentage_officer_black = "Percentage of Officers Who Are Black",
+#            mean_years_worked_unit = "Years Worked In Unit (Mean)",
+#            violent_cr_capita = "Violent Crime Per 10,000",
+#            property_cr_capita = "Property Crime Per 10,000",
+#            log_total_officers = "Log of the Total Number of Officers")
+# 
+# modelsummary(
+#     list(
+#         cong_basic,
+#         cong_full,
+#         "Stops of Black Civilians" = prcnt_basic,
+#         prcnt_full,
+#         diff_basic,
+#         diff_full
+#     ),
+#     coef_omit = "(Intercept)|theta",
+#     coef_map = rename,
+#     estimate = "{estimate} ({std.error}){stars}",
+#     statistic = NULL,
+#     stars = T,
+#     gof_omit = "R2$|R2 Adj|R2 Within",
+#     exponentiate = T,
+#     output = "latex",
+#     add_rows = offset_row,
+#     notes = c(
+#         "Standard Errors in parentheses. Coefficients are incident rate ratios.",
+#         "P-values are denoted by symbols: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001")) %>%
+#     kable_styling(full_width = F, latex_options = "scale_down")
 ```
+
+```{r}
+new_data <-
+    final_vars %>%
+    group_by(unit, year) %>%
+    summarise(property_cr_capita = mean(property_cr_capita),
+              violent_cr_capita = mean(violent_cr_capita),
+              mean_years_worked_unit = mean(mean_years_worked_unit),
+              log_total_officers = mean(log_total_officers),
+              black = mean(black),
+              min = min(black_ratio),
+              max = max(black_ratio),
+              med = median(black_ratio),
+              p25 = quantile(black_ratio)[["25%"]],
+              p75 = quantile(black_ratio)[["75%"]]) %>%
+    ungroup() %>%
+    pivot_longer(c("min", "max", "med", "p25", "p75"),
+                 names_to = "type",
+                 values_to = "black_ratio")
+
+predict_results <-
+    new_data %>%
+    mutate(predicted_black_stops = predict(cong_full, newdata = new_data) * black,
+           type = factor(type, levels = c("min", "p25", "med", "p75", "max")),
+           variable = "Black Racial Congruence")
+
+predict_results %>%
+    ggplot(aes(x = type, y = predicted_black_stops)) +
+    geom_point(aes(color = year)) +
+    geom_line(aes(color = year, group = year)) +
+    facet_wrap(~unit, scales = "free") +
+    theme_bw() +
+    labs(x = "Different Values of Racial Congruence", 
+         y = "Predicted Number of Stops of Black Civilians") +
+    theme(text = element_text(size = 17))
+
+predict_results_avg <-
+    predict_results %>%
+    group_by(type) %>%
+    summarise(average_prediction = mean(predicted_black_stops)) %>%
+    ungroup()
+
+ggplot(predict_results_avg, aes(x = type, y = average_prediction)) +
+    geom_line(aes(group = 1)) +
+    geom_point() +
+    theme_bw()
+```
+
