--- a/paper-analyses/src/regression_analysis_revision.Rmd
+++ b/paper-analyses/src/regression_analysis_revision.Rmd
@@ -7,6 +7,7 @@ output: pdf_document
 ```{r, echo = F}
 library(knitr)
 opts_chunk$set(message = F, echo = F, out.width='\\textwidth')
+options("modelsummary_format_numeric_latex" = "plain")
 ```
 
 ```{r}
@@ -27,7 +28,7 @@ library(here)
 source(here("functions.R"))
 
 final_vars <-
-    read_csv(here("clean-and-process", "src", "old_stuff", "final_data.csv")) %>%
+    read_csv(here("paper-analyses", "input", "final_data.csv")) %>%
     mutate(across(c("unit", "year", "unit"), ~as.factor(.x))) %>%
     mutate(log_total_officers = log(nr_officer),
            log_black_officers = log(nr_officer_black),
@@ -37,7 +38,9 @@ final_vars <-
            property_cr_capita = property_cr * 10000 / total_pop,
            violent_cr_capita = violent_cr * 10000 /  total_pop,
            mean_years_exp = mean_days_exp / 365,
-           mean_years_worked_unit = mean_months_worked_unit / 12)
+           mean_years_worked_unit = mean_months_worked_unit / 12,
+           percentage_officer_black = prcnt_officer_black * 100,
+           percentage_civ_black = prcnt_civ_black * 100)
 ```
 
 ## Corrrelation Matrix
@@ -74,7 +77,7 @@ table_vars <-
     final_vars %>%
     dplyr::select(stops, black_stops, black_stop_rate, white_stop_rate,
                   hispanic_stop_rate, nr_officer, nr_officer_black,
-                  prcnt_officer_black, total_pop, black, prcnt_civ_black, 
+                  percentage_officer_black, total_pop, black, percentage_civ_black, 
                   black_ratio, mean_years_worked_unit, violent_cr_capita,
                   property_cr_capita)
 
@@ -291,82 +294,82 @@ modelsummary(list("Stops of Black Civilians" = fixest_cluster_nb_basic,
 ## Investigating thresholds
 
 ```{r}
-final_vars <-
-    final_vars %>%
-    mutate(percent10 = prcnt_officer_black >= 0.1,
-           percent15 = prcnt_officer_black >= 0.15,
-           percent20 = prcnt_officer_black >= 0.2,
-           percent25 = prcnt_officer_black >= 0.25,
-           percent30 = prcnt_officer_black >= 0.3)
-
-fixest_cluster_nb_t10 <-
-    femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent10 +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-fixest_cluster_nb_t15 <-
-    femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent15 +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-fixest_cluster_nb_t20 <-
-    femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent20 +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-fixest_cluster_nb_t25 <-
-    femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent25 +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-fixest_cluster_nb_t30 <-
-    femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent30 +
-              violent_cr_capita + property_cr_capita + log_total_officers +
-              year + offset(log(black)) | unit,
-          family = "negbin",
-          data = final_vars)
-
-offset_row <- tibble(term = c("", "Offset - Black Pop."),
-                     `Model 1` = c("Model 10%", "Yes"),
-                     `Model 2` = c("Model 15%", "Yes"),
-                     `Model 3` = c("Model 20%", "Yes"),
-                     `Model 4` = c("Model 25%", "Yes"),
-                     `Model 5` = c("Model 30%", "Yes"))
-attr(offset_row, "position") <- c(1, 12)
-
-modelsummary(list("Stops of Black Civilians" = fixest_cluster_nb_t10,
-                  "Stops of Black Civilians" = fixest_cluster_nb_t15,
-                  "Stops of Black Civilians" = fixest_cluster_nb_t20,
-                  "Stops of Black Civilians" = fixest_cluster_nb_t25,
-                  "Stops of Black Civilians" = fixest_cluster_nb_t30),
-             coef_omit = "(Intercept)|theta",
-             coef_rename = c(black_ratio = "Black Racial Congruence",
-                             percent10 = "10% Threshold",
-                             percent15 = "15% Threshold",
-                             percent20 = "20% Threshold",
-                             percent25 = "25% Threshold",
-                             percent30 = "30% Threshold",
-                             mean_years_exp = "Mean Amount of Experience (Years)",
-                             violent_cr_capita = "Violent Crime Per 10,000",
-                             property_cr_capita = "Property Crime Per 10,000",
-                             log_total_officers = "Log of the Total Number of Officers"),
-             estimate = "{estimate} ({std.error}){stars}",
-             statistic = NULL,
-             stars = T,
-             gof_omit = "R2$|R2 Adj|R2 Within",
-             exponentiate = T,
-             output = "latex",
-             add_rows = offset_row,
-             notes = c("Standard Errors in parentheses. Coefficients are incident rate ratios.",
-                       "P-values are denoted by symbols: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001"))
+# final_vars <-
+#     final_vars %>%
+#     mutate(percent10 = prcnt_officer_black >= 0.1,
+#            percent15 = prcnt_officer_black >= 0.15,
+#            percent20 = prcnt_officer_black >= 0.2,
+#            percent25 = prcnt_officer_black >= 0.25,
+#            percent30 = prcnt_officer_black >= 0.3)
+# 
+# fixest_cluster_nb_t10 <-
+#     femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent10 +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# fixest_cluster_nb_t15 <-
+#     femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent15 +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# fixest_cluster_nb_t20 <-
+#     femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent20 +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# fixest_cluster_nb_t25 <-
+#     femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent25 +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# fixest_cluster_nb_t30 <-
+#     femlm(black_stops ~ black_ratio + mean_years_worked_unit + percent30 +
+#               violent_cr_capita + property_cr_capita + log_total_officers +
+#               year + offset(log(black)) | unit,
+#           family = "negbin",
+#           data = final_vars)
+# 
+# offset_row <- tibble(term = c("", "Offset - Black Pop."),
+#                      `Model 1` = c("Model 10%", "Yes"),
+#                      `Model 2` = c("Model 15%", "Yes"),
+#                      `Model 3` = c("Model 20%", "Yes"),
+#                      `Model 4` = c("Model 25%", "Yes"),
+#                      `Model 5` = c("Model 30%", "Yes"))
+# attr(offset_row, "position") <- c(1, 12)
+# 
+# modelsummary(list("Stops of Black Civilians" = fixest_cluster_nb_t10,
+#                   "Stops of Black Civilians" = fixest_cluster_nb_t15,
+#                   "Stops of Black Civilians" = fixest_cluster_nb_t20,
+#                   "Stops of Black Civilians" = fixest_cluster_nb_t25,
+#                   "Stops of Black Civilians" = fixest_cluster_nb_t30),
+#              coef_omit = "(Intercept)|theta",
+#              coef_rename = c(black_ratio = "Black Racial Congruence",
+#                              percent10 = "10% Threshold",
+#                              percent15 = "15% Threshold",
+#                              percent20 = "20% Threshold",
+#                              percent25 = "25% Threshold",
+#                              percent30 = "30% Threshold",
+#                              mean_years_exp = "Mean Amount of Experience (Years)",
+#                              violent_cr_capita = "Violent Crime Per 10,000",
+#                              property_cr_capita = "Property Crime Per 10,000",
+#                              log_total_officers = "Log of the Total Number of Officers"),
+#              estimate = "{estimate} ({std.error}){stars}",
+#              statistic = NULL,
+#              stars = T,
+#              gof_omit = "R2$|R2 Adj|R2 Within",
+#              exponentiate = T,
+#              output = "latex",
+#              add_rows = offset_row,
+#              notes = c("Standard Errors in parentheses. Coefficients are incident rate ratios.",
+#                        "P-values are denoted by symbols: + p < 0.1, * p < 0.05, ** p < 0.01, *** p < 0.001"))
 ```
 
 ## Predictions To Aid In Interpretation of Coefficients
